--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Glow Up</title>
+  <link rel="icon" href="Apresentação - EMPRESA GLOW UP (1).png" type="image/png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -113,4 +114,5 @@
     }
   </script>
 </body>
+
 </html>
