--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
       <p>
         Nós somos 6 meninas do terceiro ano do ensino médio, Ana Caroline Ormedilla, Emilly Costa, Fernanda Carvalho, Giovanna Vitória, Maria Eduarda Campos e Mariana Ramos com uma missão: tornar o skincare acessível para todos. Percebemos que cuidar de si mesmo não deveria ser um privilégio, mas sim um direito. Por isso, criamos uma marca que combina eficácia e acessibilidade, provando que é possível ter uma pele linda sem gastar muito.
         Nossa paixão vai além do cuidado pessoal. Acreditamos que a beleza deve ser gentil com você e com o planeta. Por isso, todos os nossos produtos são pensados com a preservação do meio ambiente em mente. Junte-se a nós nessa jornada e descubra que o autocuidado pode ser simples, eficaz e consciente. Para mais informaçoes acesse nossa proposta!
+        <br>
+        <a id="proposta" href="Apresentação - EMPRESA GLOW UP.pdf" target="_blank" rel="noopener noreferrer">ver proposta</a>
       </p>
     </div>
   </section>
